@@ -5,9 +5,9 @@ import java.util.List;
 
 import me.boops.cache.Config;
 import me.boops.functions.nonapi.GetAllNotes;
+import me.boops.jumblr.BlogPosts;
+import me.boops.jumblr.DecodePost;
 import me.boops.logger.Logger;
-import pw.frgl.jumblr.BlogPosts;
-import pw.frgl.jumblr.DecodePost;
 
 public class GetAllTags {
 	
